infrastructure/kubernetes/inventory-postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgis-inventory-service
  namespace: default
  labels:
    app: postgis-inventory-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgis-inventory-service
  template:
    metadata:
      labels:
        app: postgis-inventory-service
    spec:
      containers:
        - name: postgis-inventory-service
          image: postgis/postgis:14-3.3
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgis-inventory-pv
      volumes:
        - name: postgis-inventory-pv
          persistentVolumeClaim:
            claimName: postgis-inventory-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgis-inventory-service
  namespace: default
spec:
  selector:
    app: postgis-inventory-service
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: LoadBalancer

# apiVersion: v1
# kind: Service
# metadata:
#   name: postgis-inventory-service
#   namespace: default
# spec:
#   selector:
#     app: postgis-inventory-service
#   ports:
#     - protocol: TCP
#       port: 5432
#       targetPort: 5432
#   type: ClusterIP
