infrastructure/kubernetes/akhq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akhq
  namespace: kafka
  labels:
    app: akhq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: akhq
  template:
    metadata:
      labels:
        app: akhq
    spec:
      containers:
        - name: akhq
          image: tchiotludo/akhq:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: akhq
  namespace: kafka
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: akhq
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akhq-ingress
  namespace: kafka
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt-dev
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "akhq.fadellh.com"
      secretName: web-ssl-wrqdc
  rules:
    - host: akhq.fadellh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: akhq
                port:
                  number: 80
